# Assignment1

./: README.md  pyproject.toml  submit.py  test.conll
code/: README.md  badfeaturesmodel.joblib  dan_parsed.conll  dan_text.txt  en_model.joblib  en_test.conll  output.conll  parse.py  parse_sentences.py  parsed.conll  sw_parsed.conll  test.py  transition.py
code/.ipynb_checkpoints/: my_parsed-checkpoint.conll  my_text-checkpoint.txt  parse_sentences-checkpoint.py  report-checkpoint.txt  sw_text-checkpoint.txt  test-checkpoint.py
code/providedcode/: dependencycorpusreader.py  evaluate.py  featureextractor.py  transitionparser.py
code/providedcode/.ipynb_checkpoints/: dataset-checkpoint.py  dependencycorpusreader-checkpoint.py  dependencygraph-checkpoint.py  evaluate-checkpoint.py  transitionparser-checkpoint.py
